--- a/src/account/templates/account/display_data.html
+++ b/src/account/templates/account/display_data.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show last user</title>
-</head>
-<body>
-    <div>
-        <ul>
-            {% for user in users %}
-            <li>{{ forloop.counter }}. {{user.username}}</li>
-            {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
+{% extends "base/base.html" %}
+
+{% block title %}
+<title>All users</title>
+{% endblock %}
+
+{% block content %}
+<div>
+    <ul style="list-style-type: none;">
+        {% for user in users %}
+        <li>{{ forloop.counter }}. {{user.username}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
